# yet-another-car-dsp

./: .gitignore  Cargo.toml  README.md  com.asiantuntija.yacd.desktop  flake.nix  module.nix
src/: backend.rs  main.rs  paths.rs  session.rs  state.rs  style.rs  ui.rs
src/effects/: config.rs  mod.rs  types.rs
