[package]
name = "yet-another-car-dsp"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.11.3"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glib = { version = "0.22.6", features = [ "v2_86" ] }
libadwaita = { version = "0.9", features = [ "v1_8" ] }
log = "0.4"
env_logger = "0.11"
gio = { version = "0.22.6", features = ["v2_86"]}
